<resources>
    <string name="app_name">Task Manager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="new_task">New Task</string>
    <string name="non_empty_field">Field cannot be empty</string>
    <string name="fill_all_required_fields">Fill all required fields</string>
    <string name="set_deadline" >Set Task Deadline</string>
    <string name="to_do">To-Do</string>
    <string name="add_todo">Add to-dos</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="mark_complete">Mark complete</string>
    <string name="update">Upadate</string>
</resources>