<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.TaskManager"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_todo"
            android:textStyle="bold"
            android:textSize="21sp"
            android:id="@+id/action"
            android:layout_centerHorizontal="true"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_todo"
            app:tint="?colorControlNormal"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_delete_outline_24"
            android:contentDescription="@string/delete"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/grey"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle_18dp"
        android:id="@+id/title"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:autofillHints=""
        android:hint="@string/title"
        android:backgroundTint="?backgroundColor"
        android:imeOptions="actionNext"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle_18dp"
        android:id="@+id/description"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:imeOptions="actionDone"
        android:autofillHints=""
        android:hint="@string/description"
        android:backgroundTint="?backgroundColor"
        android:inputType="text" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/task_picker"
        android:backgroundTint="?backgroundColor"
        android:background="@drawable/rectangle_18dp"
        >
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="@dimen/layout_vertical_margin"
            android:paddingEnd="@dimen/layout_vertical_margin"
            android:backgroundTint="?colorControlNormal"
            android:layout_gravity="center"
            android:id="@+id/task_spinner"
            android:spinnerMode="dropdown"

            />


    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/blue"
        android:background="@drawable/rectangle_18dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/alert"
            android:src="@drawable/baseline_notifications_none_24"
            android:textSize="16sp"
            app:tint="@color/white"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/save"
            android:text="@string/save"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:gravity="center"/>

    </RelativeLayout>


</LinearLayout>