<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.task.TaskDetailsActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_vertical_margin"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="?actionBarSize">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:background="@null"
                    android:id="@+id/title"
                    app:layout_collapseMode="pin"
                    android:autofillHints=""
                    android:hint="@string/title"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/grey"
                    android:inputType="textShortMessage" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:background="@null"
                    android:id="@+id/description"
                    android:autofillHints=""
                    android:imeOptions="actionDone"
                    android:hint="@string/description"
                    android:backgroundTint="@color/grey"
                    android:inputType="textImeMultiLine" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/rectangle_18dp_stroke"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/due_date"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/activity_vertical_margin"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/set_deadline"
                        android:id="@+id/set_deadline"
                        android:textColor="@color/blue"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:textSize="16sp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/rectangle_18dp"
                    android:backgroundTint="?background"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_do"
                        android:gravity="center_vertical"
                        android:padding="4dp"
                        android:layout_marginStart="@dimen/activity_vertical_margin"


                        android:id="@+id/to_do_txt"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/item_count"
                        android:text="0"
                        android:textColor="@color/blue"
                        android:layout_marginStart="@dimen/activity_vertical_margin"
                        android:layout_toEndOf="@id/to_do_txt"
                        android:padding="4dp"
                        android:background="@drawable/rectangle_18dp_stroke"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/widget_add_light"
                        android:id="@+id/add_todo"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        app:tint="?iconTint"
                        android:layout_alignParentEnd="true"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:id="@+id/to_do_recycler"
                        android:layout_below="@id/to_do_txt"/>
                </RelativeLayout>
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>